--- a/src/app/client/pages/my-page/points/history/PointsHistory.module.css
+++ b/src/app/client/pages/my-page/points/history/PointsHistory.module.css
@@ -1,6 +1,7 @@
 .container {
   min-height: 100vh;
   padding-bottom: 20px;
+  margin-top: 71.59px;
 }
 
 .filterSection {
@@ -13,12 +14,11 @@
   border-bottom: none;
 }
 
-.divider {
+/* .divider {
   height: 14px;
   background-color: #f2f4f7;
-  margin: 0 -16px;
 }
-
+ */
 .filterLabel {
   font-size: 14px;
   color: #666;
@@ -82,7 +82,7 @@
 }
 
 .historyAmount.positive {
-  color: #7DB59A;
+  color: #7db59a;
 }
 
 .historyAmount.negative {
@@ -100,16 +100,16 @@
   .filterSection {
     padding: 14px 16px;
   }
-  
+
   .historyItem {
     padding: 18px 0;
   }
-  
+
   .historyDescription {
     font-size: 15px;
   }
-  
+
   .historySubtitle {
     font-size: 13px;
   }
-} 
+}
